fixed light dark mode buttons

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -5,8 +5,8 @@
     list-style: none;
   }
   :root{
-    --color-primary: #191d2b;
-    --color-secondary: #34dceb;
+    --color-primary: #0c0e14;
+    --color-secondary: #2a7279;
     --color-white: #FFFFFF;
     --color-black: #000;
     --color-grey0: #f8f8f8;
@@ -18,15 +18,6 @@
     --color-grey-6: #12181b;
     --pad: max(20px, 4vmin);
   }
-
-html {
-    line-height: 1;
-    box-sizing: border-box;
-}
-
-main,canvas {
-    display: block
-}
 
 h1,h2,h3,h4,h5,h6 {
     font-weight: inherit;
@@ -41,19 +32,54 @@ a {
 ol,ul {
     list-style: none
 }
-  body{
+
+.light-mode {
+  --color-primary: #FFFFFF;
+  --color-secondary: #2a7279;
+  --color-white: #454e56;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --color-grey-6: #12181b;
+  .page-content{
+    color:#000;
+    span{
+      font-weight: bold;
+    }
+  }
+  .title{
+    h2{
+      color: var(--color-grey-6);
+      font-weight: 600px;
+      .bg-text{
+        opacity: 0;
+      }
+    }
+  }
+  .ld-button{
+    i{
+      color: white;
+    }
+  }
+}
+
+body{
     font-family: "Source Code Pro";
     font-weight: 100;
     font-style: normal;
-    background-color: var(--color-grey-4);
+    background-color: var(--color-primary);
     font-size: 1.1rem;
     color: var(--color-white);
-    transition: all .4s ease-in-out;
+    transition: all 1s ease-in-out;
     -webkit-text-size-adjust: none;
     text-size-adjust: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overscroll-behavior: none
+    overscroll-behavior: none;
   }
   .frame {
     position: absolute;
@@ -69,20 +95,20 @@ ol,ul {
 .frame_line {
     position: absolute;
     background-color: #fff;
-    opacity: .5
+    opacity: 1
 }
 
 .frame_line-left {
     left: 0;
     top: 0;
-    width: 1px;
+    width: 5px;
     height: 100%
 }
 
 .frame_line-right {
     right: 0;
     top: 0;
-    width: 1px;
+    width: 5px;
     height: 100%
 }
 
@@ -90,119 +116,118 @@ ol,ul {
     left: 0;
     top: 0;
     width: 100%;
-    height: 1px
+    height: 5px
 }
 
 .frame_line-bottom {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 1px
+    height: 5px
 }
-  a{
-    display: inline-block;
-    text-decoration: none;
-    color: inherit;
-    font-family: inherit;
-  }
-  
-  header{
-    height: 100vh;
-    color: var(--color-white);
-    overflow: hidden;
-  }
-  
-  section{
-    display: none;
-    width: 100%;
-    min-height: 100vh;
-    position: absolute;
-    left: 0;
-    top:0;
-    padding: 5rem 5rem;
-  }
-  
-  .section{
-    transform: translateY(-100%);
-    transition: all .4s ease-in-out;
-    background-color: var(--color-primary);
-  }
-  
-  .sec1{
-    display: none;
-    transform: translateY(0) scale(1);
-    background-color: var(--color-primary);
-  }
-  
-  .sec2{
-    display: none;
-    transform: translateY(0) scale(1);
-    background-color: var(--color-primary);
-  }
-  
-  .sec3{
-    display: none;
-    transform: translateY(0) scale(1);
-    background-color: var(--color-primary);
-  }
-  
-  .sec4{
-    display: none;
-    transform: translateY(0) scale(1);
-    background-color: var(--color-primary);
-  }
-  
-  .sec5{
-    display: none;
-    transform: translateY(0) scale(1);
-  }
 
-  .active{
-    display: flex;
-    animation: fade 1s linear;      
-    
-    @keyframes fade {
-        0% { opacity: 0; }
-        100% { opacity: 1; }
+a{
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+  font-family: inherit;
+}
+
+header{
+  height: 100vh;
+  color: var(--color-white);
+  overflow: hidden;
+}
+
+section{
+  display: none;
+  width: 100%;
+  min-height: 100vh;
+  position: absolute;
+  left: 0;
+  top:0;
+  padding: 5rem 5rem;
+}
+
+.section{
+  transform: translateY(-100%);
+  transition: all 1s ease-in-out;
+}
+
+.sec1{
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.sec2{
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.sec3{
+  display: none;
+  transform: translateY(0) scale(1);
+
+}
+
+.sec4{
+  display: none;
+  transform: translateY(0) scale(1);
+
+}
+
+.sec5{
+  display: none;
+  transform: translateY(0) scale(1);
+
+}
+
+.active{
+  display: flex;
+  animation: fade 1s linear;      
+  
+  @keyframes fade {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+}
+
+.controls{
+  position:fixed;
+  z-index: 10;
+  top: 50%;
+  left: 3%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+  .active-btn{
+      background-color: var(--color-secondary) !important;
+      transition: all .4s ease-in-out;
+      i{
+          color: var(--color-white) !important;
+      }    
+  }
+  .control{
+      padding: 1rem;
+      cursor: pointer;
+      background-color: var(--color-grey-4);
+      width: 55;
+      height: 55;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin:  .7rem 1rem;
+      box-shadow: 0 3px 15px var(--color-grey-5) ;
+      i{
+          font-size: 1.2rem;
+          color: var(--color-grey-1);
+          pointer-events: none;
       }
   }
-  
-  .controls{
-    position:fixed;
-    z-index: 10;
-    top: 50%;
-    left: 3%;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transform: translateY(-50%);
-    .active-btn{
-        background-color: var(--color-secondary) !important;
-        transition: all .4s ease-in-out;
-        i{
-            color: var(--color-white) !important;
-        }    
-    }
-    .control{
-        padding: 1rem;
-        cursor: pointer;
-        background-color: var(--color-grey-4);
-        width: 55;
-        height: 55;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin:  .7rem 0;
-        box-shadow: 0 3px 15px var(--color-grey-5) ;
-        i{
-            font-size: 1.2rem;
-            color: var(--color-grey-1);
-            pointer-events: none;
-        }
-    }
-  }
+}
 
 
 .title{
@@ -217,20 +242,22 @@ ol,ul {
       position:absolute;
       top:50%;
       left:50%;
-      transition: all .4s ease-in-out;
       z-index: -1;
       transform: translate(-50%,-50%);
       width: 200%;
       color: var(--color-grey-4);
       font-size: 3rem;
       font-stretch: extra-expanded;
-
     }
   }
 }
-.home {
+
+.page-content {
+  color: var(--color-grey0);
   position: absolute;
-  right: 3%;
+  right: 10%;
+  font-weight: bold;
+  transition: all 2s ease-in-out;
   bottom: 50%;
   line-height: 1.5;
   span {
@@ -238,25 +265,21 @@ ol,ul {
   }
 }
 
+.home{
+  right: 3%;
+}
+
 //light and dark mode button
 .lightdark{
-  position:fixed;
+  position:absolute;
   z-index: 10;
-  bottom: 3%;
+  bottom: 1%;
   right: 3%;
   display:flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
   transform: translateY(-50%);
-  .active-btn{
-      background-color: var(--color-secondary) !important;
-      transition: all .4s ease-in-out;
-      i{
-          color: var(--color-white) !important;
-      }    
-  }
-  .button{
+  .ld-button{
       padding: 1rem;
       cursor: pointer;
       background-color: var(--color-grey-4);
@@ -266,13 +289,12 @@ ol,ul {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin:  0 .3rem;
+      margin:  .7rem 1rem;
       box-shadow: 0 3px 15px var(--color-grey-5) ;
-      i{
+      .ld-btn{
           font-size: 1.2rem;
-          color: var(--color-grey-1);
+          color: white;
           pointer-events: none;
       }
   }
 }
-
